--- a/SalaoNovo/appsettings.json
+++ b/SalaoNovo/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SalaoNovoContext": "server=localhost;userid=developer;password=ulysses9;database=salaonovobd"
+  }
 }
